Convert array parameters of some methods to varargs